JumpScript/tests/baselines/reference/unusedImports6.errors.txt
tests/cases/compiler/file2.jump(1,8): error TS6133: 'd' is declared but its value is never read.


==== tests/cases/compiler/file1.jump (0 errors) ====
    export class Calculator {
        handleChar() {}
    }
    
    export function test() {
    
    }
    
    export default function test2() {
    
    }
    
==== tests/cases/compiler/file2.jump (1 errors) ====
    import d from "./file1"
           ~
!!! error TS6133: 'd' is declared but its value is never read.
    
    
    
    